<?xml version="1.0"?>
<package format="2">
  <name>mofpy_demo</name>
  <version>0.1.0</version>
  <description>Demo for the mofpy package</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://gitlab.com/team-quix/arm/mofpy_demo</url>

  <author email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>mofpy</exec_depend>

  <export>
  </export>
</package>
